--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,11 @@
 <!-- app/views/tasks/edit.html.erb -->
-<%= render "form", task: @task %>
+<div class="container mt-5">
+  <h1>Edit task</h1>
+
+  <%= render "form", task: @task %>
+
+  <hr>
+  <%= link_to tasks_path do %>
+    <i class="fa-solid fa-arrow-rotate-left"></i> Back to list
+  <% end %>
+</div>
