--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,19 @@
-<!-- app/views/tasks/show.html.erb -->
+<div class="container mt-5">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1><%= @task.title %></h1>
+    <%= link_to edit_task_path(@task.id), class: 'btn btn-light btn-sm border' do %>
+      <i class="fa fa-pencil"></i> Edit this task
+    <% end %>
+  </div>
 
-<h2><%= @task.title %></h2>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
+
+  <p class="well"><%= @task.details %></p>
+
+  <% if @task.completed %>
+    <i class="fa fa-check-square-o"></i> This task is completed
+  <% else %>
+    <i class="fa fa-square-o"></i> This task is not completed yet
+  <% end %>
 
 <%= link_to "Delete",
   task_path(@task),
